--- a/project.html
+++ b/project.html
@@ -2,7 +2,7 @@
     My presentation, resume and projects
     Simon Paquette - Portfolio
     Author: Simon Paquette
-    Latest update: 2021/08
+    Latest update: 2022/06
 -->
 
 <!DOCTYPE html>
@@ -60,6 +60,23 @@
         </ul>
       </nav>
     </header>
+
+    <div id="projects">
+      <div class="project">
+        <div class="intro" lang="en">
+          <h1>
+            This page is deprecated. There will be a transition to my Github
+            account to present my projects in the future.
+          </h1>
+        </div>
+        <div class="intro" lang="fr">
+          <h1>
+            Cette page est obsolète. Il y aura une transition vers mon compte
+            Github pour présenter mes projets à l'avenir.
+          </h1>
+        </div>
+      </div>
+    </div>
 
     <div id="projects">
       <div class="project">
