--- a/resume.html
+++ b/resume.html
@@ -2,7 +2,7 @@
     My presentation, resume and projects
     Simon Paquette - Portfolio
     Author: Simon Paquette
-    Latest update: 2021/08
+    Latest update: 2022/06
 -->
 
 <!DOCTYPE html>
@@ -129,7 +129,7 @@
           <p>University of Ottawa, Ottawa, Ontario</p>
           <ul>
             <li>Graduation planned in December 2022</li>
-            <li>GPA of 9.28</li>
+            <li>GPA of 9.24</li>
             <li>Received merit scholarships</li>
             <li>Received admission scholarship for an average over 80%</li>
             <li>Renewable bursary for French studies</li>
@@ -166,7 +166,7 @@
           <p>Université d'Ottawa, Ottawa, Ontario</p>
           <ul>
             <li>Obtention du diplôme prévu en décembre 2022</li>
-            <li>MPC de 9,28</li>
+            <li>MPC de 9,24</li>
             <li>Obtenu des bourses au mérite</li>
             <li>
               Obtenu une bourse d'admission avec une moyenne académique de 80%
@@ -201,11 +201,26 @@
         <section lang="en">
           <h1>Work Experience</h1>
 
+          <h2>Software Developer Junior</h2>
+          <p class="date">May 2022 - August 2022</p>
+          <p>ADGA, Space Division, Ottawa, Ontario</p>
+          <p>
+            <a href="https://www.adga.ca/products/amari-by-adga"
+              >Amari Project</a
+            >
+          </p>
+
           <h2>Geomatics systems developer</h2>
           <p class="date">June 2020 - December 2021</p>
           <p>
             Natural Resources Canada, Emergency Geomatics Service, Ottawa,
             Ontario
+          </p>
+          <p>
+            <a
+              href="https://www.nrcan.gc.ca/science-and-data/science-and-research/natural-hazards/floods-river-ice-break/10660"
+              >Mapping floods and river ice break-up</a
+            >
           </p>
           <ul>
             <li>
@@ -226,7 +241,7 @@
             </li>
             <li>
               Developed new scripts to gather data from web services like AWS
-              and NRCan EODMS API
+              datacube and NRCan EODMS API
             </li>
             <li>
               Used artificial intelligence libraries like TensorFlow and Scikit
@@ -242,7 +257,7 @@
             </li>
             <li>
               Documented and organized data to process images from RCM,
-              Radarsat-2 and Sentinel-1 satellites
+              Radarsat-2 and Sentinel-1 satellites (JSON dataset)
             </li>
             <li>
               Processed, orthorectified, extract and filtered Rasters to obtain
@@ -270,11 +285,24 @@
         <section lang="fr">
           <h1>Expérience de travail</h1>
 
+          <h2>Développeur de logiciels junior</h2>
+          <p class="date">mai 2022 - août 2022</p>
+          <p>ADGA, Division Espace, Ottawa, Ontario</p>
+          <p>
+            <a href="https://fr.adga.ca/products/amari-by-adga">Projet Amari</a>
+          </p>
+
           <h2>Développeur de systèmes géomatiques</h2>
-          <p class="date">juin 2020 - Décembre 2021</p>
+          <p class="date">juin 2020 - décembre 2021</p>
           <p>
             Ressources Naturelles Canada, Service de Géomatique d'Urgence,
             Ottawa, Ontario
+          </p>
+          <p>
+            <a
+              href="https://www.rncan.gc.ca/science-et-donnees/science-et-recherche/dangers-naturels/inondations-debacles-rivieres/10671"
+              >Cartographie des inondations et débâcles des rivières</a
+            >
           </p>
           <ul>
             <li>
@@ -296,15 +324,15 @@
             </li>
             <li>
               Développer de nouveaux scripts afin de télécharger des données
-              provenant de service web comme AWS et NRCan EODMS API
+              provenant de service web comme un datacube AWS et NRCan EODMS API
             </li>
             <li>
               Uiliser des librairies d'intelligence artificielle comme
               TensorFlow et Scikit pour faire la classification d'images
             </li>
             <li>
-              Effectuer du débogage sur du code C++ afin de faciliter l'exécution
-              de traitement d'images
+              Effectuer du débogage sur du code C++ afin de faciliter
+              l'exécution de traitement d'images
             </li>
             <li>
               Remanier et améliorer le code pour adapter la base de code EGS aux
@@ -312,7 +340,8 @@
             </li>
             <li>
               Documenter et organiser des données pour traiter les images
-              provenant de satellites RCM, Radarsat-2 et Sentinel-1
+              provenant de satellites RCM, Radarsat-2 et Sentinel-1 (dataset
+              JSON)
             </li>
             <li>
               Traiter, orthorectifier, extraire et filtrer des Rasters pour
@@ -359,21 +388,35 @@
             <p><b class="align">3+ years:</b> Python</p>
             <p><b class="align">1 year:</b> Java, C++</p>
             <p>
-              <b class="align">Familiar:</b> HTML, CSS, JavaScript, C, Go,
-              Prolog, Scheme, Ocaml, SQL
+              <b class="align">Familiar:</b> SQL, HTML, CSS, JavaScript, C, Go,
+              Prolog, Scheme, Ocaml
             </p>
+
+            <h2>Technologies</h2>
+            <p>Github, Gitlab, SVN</p>
+            <p>VScode, Visual Studio</p>
+            <p>Win, Linux</p>
+            <p>JSON, YAML</p>
+            <p>Docker, Kubernetes</p>
+            <p>OpenCV, GDAL, Tensorflow, Scikit-Learn, Numpy, Pandas</p>
+            <p>PostgreSQL</p>
 
             <h2>Aptitudes</h2>
             <p>Data Structure</p>
             <p>Object-Oriented Programming</p>
             <p>Image Processing</p>
+            <p>AI, Machine Learning, Deep Learning</p>
+            <p>Data Science</p>
             <p>Geographic Information System</p>
             <p>Algorithms</p>
             <p>Programming Paradigm</p>
             <p>Formal Languages</p>
             <p>Computer Networking and Operating System</p>
             <p>Maths - Calculus, Probabilities, Graphs, Matrices</p>
-            <p>Biophysics - Statistical Thermodynamics, Biomolecular Systems</p>
+            <p>
+              Biophysics - Molecular Biophysics, Statistical Thermodynamics,
+              Biomolecular Systems
+            </p>
 
             <h2>Projects</h2>
             <p>Designed the logic of a small board game (6 Nimmt!) in C++</p>
@@ -391,56 +434,6 @@
             </p>
             <p>Solved mini project with Raspberry Pi</p>
           </div>
-
-          <!--    This part is esssential in a coop resume
-                    <h2> Computer Science </h2>
-                    <br class="print">
-                    <ul>
-                        <li> Good knowledge of Python, Java, and C++ </li>
-                        <li> Basic knowledge of HTML, CSS, JavaScript, C, Go, Prolog, Scheme, Ocaml, SQL </li>
-                        <li> Applied programming paradigm : object-oriented, imperative, concurrent, logic, functional </li>
-                        <li> Learned the concept of recursion, formal language, automata and pointers </li>
-                        <li> Analyzed the complexity of abstract data types especially on trees, but also on linked structure to implements queues and stacks </li>
-                        <li> Learned discrete structures, algorithm analysis and design </li>
-                        <li> Applied problem-solving techniques using divide-and-conquer, dynamic and greedy algorithms and evaluate computational complexity theory </li>
-                        <li> Developed graphical user interface of small games such as Tic-Tac-Toe and Lights-out </li>
-                        <li> Elaborated a database and make the ER diagram and normalization </li>
-                        <li> Modeled interactions and behaviour of different architecture design using UML </li>
-                        <li> Studied software engineering process and type of frameworks </li>
-                        <li> Created an Android application in a group project to managed clinic appointment </li>
-                        <li> Analyzed, designed, and implemented combinational and sequential circuits with Boolean algebra </li>
-                        <li> Used and converted numeral systems: binary, octal, decimal, and hexadecimal </li>
-                        <li> Designed a digital computer using Quartus to implement register transfer, microoperation and CPU control </li>
-                        <li> Studied the principles of operating systems, process and memory management </li>
-                        <li> Overviewed of computer networking, communication and transmission systems </li>
-                        <li> Solved mini project with Raspberry Pi </li>
-                    </ul>
-                    <h2> Mathematics </h2>
-                    <br class="print">
-                    <ul>
-                        <li> Learned graph theory, recurrence relations and basic cryptographical applications </li>
-                        <li> Analyzed functions with derivates and techniques of integration, to develop improper integrals, partial derivates, sequences and series </li>
-                        <li> Applied vector spaces and matrix algebra to the geometry, networks, and differential equations </li>
-                        <li> Evaluated discrete structures and graph theory applied to computing </li>
-                        <li> Calculated probability on random variables and analysed statistics models </li>
-                    </ul>
-                    <h2> Sciences </h2>
-                    <br class="print">
-                    <ul>
-                        <li> Studied the cell communication and the cytoskeleton </li>
-                        <li> Recognized the structure and the varieties of cell </li>
-                        <li> Learned the replication, transcription, and translation of DNA </li>
-                        <li> Demonstrated the fundamentals of the evolution of biological diversity</li>
-                        <li> Applied Statistical thermodynamics to conformation, folding and binding of biomolecular systems </li>
-                        <li> Calculated mechanical properties of biological systems, cellular motor forces and self-organization of cells </li>
-                        <li> Applied Newton's laws, motion, and energy transfer </li>
-                        <li> Learned the wave theory, geometrical optics, and modern physics </li>
-                        <li> Tested circuit theory and magnetic field </li>
-                        <li> Studied special relativity and nuclear physics</li>
-                        <li> Analysed the principles of chemistry, kinetics, and equilibrium of chemical bonding in laboratory</li>
-                        <li> Classified and identified the structural characterization of organic compounds </li>
-                    </ul>
-                -->
         </section>
 
         <section lang="fr">
@@ -454,14 +447,25 @@
             <p><b class="align">3+ ans:</b> Python</p>
             <p><b class="align">1 an:</b> Java, C++</p>
             <p>
-              <b class="align">Familier:</b> HTML, CSS, JavaScript, C, Go,
-              Prolog, Scheme, Ocaml, SQL
+              <b class="align">Familier:</b> SQL, HTML, CSS, JavaScript, C, Go,
+              Prolog, Scheme, Ocaml
             </p>
+
+            <h2>Technologies</h2>
+            <p>Github, Gitlab, SVN</p>
+            <p>VScode, Visual Studio</p>
+            <p>Win, Linux</p>
+            <p>JSON, YAML</p>
+            <p>Docker, Kubernetes</p>
+            <p>OpenCV, GDAL, Tensorflow, Scikit-Learn, Numpy, Pandas</p>
+            <p>PostgreSQL</p>
 
             <h2>Aptitudes</h2>
             <p>Structure de Données</p>
             <p>Programmation Orienté-Objet</p>
             <p>Traitement d'Images</p>
+            <p>IA, Apprentissage Automatique, Apprentissage Profond</p>
+            <p>Science des Données</p>
             <p>Système d'Information Géographique</p>
             <p>Algorithmes</p>
             <p>Paradigmes de Programmations</p>
@@ -469,7 +473,8 @@
             <p>Réseautage d'Ordinateurs et Systèmes d'Opérations</p>
             <p>Maths - Calculus, Probabilités, Graphes, Matrices</p>
             <p>
-              Biophysique - Statistique Thermodynamique, Système Biomoléculaires
+              Biophysique - Biophysique Moléculaire, Statistique
+              Thermodynamique, Système Biomoléculaires
             </p>
 
             <h2>Projets</h2>
@@ -491,56 +496,6 @@
             </p>
             <p>Résoudre des petits problèmes avec Raspberry Pi</p>
           </div>
-
-          <!--    This part is esssential in a coop resume
-                    <h2> Programmation </h2>
-                    <br class="print">
-                    <ul>
-                        <li> Bonne connaissance de Python, Java et de C++ </li>
-                        <li> Connaissance de base en HTML, CSS, JavaScript, C, Go, Prolog, Scheme, Ocaml, SQL </li>
-                        <li> Appliquer les paradigmes de programmations : orienté-objet, impératif, concurrent, logique, fonctionnel </li>
-                        <li> Apprendre le concept de récursivité, de langage formel, d'automates et de pointeurs </li>
-                        <li> Analyser la complexité des types de données abstraites en particulier sur les arbres, mais aussi sur les structures chainées pour mettre en place des files et des piles </li>
-                        <li> Apprendre les structures discrètes, analyser et concevoir des algorithmes </li>
-                        <li> Appliquer des techniques de résolution de problèmes à l'aide d'algorithme de diviser pour régner, dynamique et voraces et évaluer la théorie de la complexité du calcul </li>
-                        <li> Développer une interface graphique pour de petits jeux tels que Tic-Tac-Toe et Lights-out </li>
-                        <li> Élaborer une base de données et en faire le diagramme ER et la normalisation </li>
-                        <li> Modeler les interactions et les comportements de différentes architectures en utilisant le UML </li>
-                        <li> Étudier les processus du génie logiciel et les types de cadriciels </li>
-                        <li> Créer une application Android dans un projet de groupe pour gérer les rendez-vous d'une clinique </li>
-                        <li> Analyser, concevoir et mettre en place des circuits combinatoires et séquentiels à l'aide de la logique Booléenne </li>
-                        <li> Utiliser et convertir des systèmes de numération : binaire, octale, décimale et hexadécimale </li>
-                        <li> Concevoir une machine à calculer en utilisant Quartus pour mettre en oeuvre le transfert de registre, les micro-opérations et le contrôle UCT </li>
-                        <li> Étudier les principes de systèmes d'opérations, la gestion des processus et de la mémoire </li>
-                        <li> Regarder l'application du réseautage d'ordinateurs et des systèmes de communication et de transmission </li>
-                        <li> Résoudre des petits problèmes avec Raspberry Pi </li>
-                    </ul>
-                    <h2> Mathématiques </h2>
-                    <br class="print">
-                    <ul>
-                        <li> Apprendre la théorie des graphes, les relations de récurrence et les applications cryptographiques de base </li>
-                        <li> Analyser les fonctions avec les dérivées et les techniques d'intégration, pour développer les intégrales impropres, les dérivées partiels, les séquences et les séries </li>
-                        <li> Appliquer les espaces vectoriels et les matrices à la géométrie, les réseaux et les équations différentiels </li>
-                        <li> Évaluer les structures discrètes et la théorie des graphes appliqués à l'informatique </li>
-                        <li> Calculer les probabilités de variables aléatoires et analyser les modèles statistiques </li>
-                    </ul>
-                    <h2> Sciences </h2>
-                    <br class="print">
-                    <ul>
-                        <li> Étudier la communication cellulaire et le cytosquelette </li>
-                        <li> Reconnaitre les structures et les fonctions de cellules et des organites </li>
-                        <li> Apprendre l'organisation, la réplication et l'expression du matériel génétique </li>
-                        <li> Démontrer le principe de l'évolution de la biodiversité </li>
-                        <li> Appliquer la statistique thermodynamique à des problèmes de conformations, de dynamique et d'assemblage de système biomoléculaires </li>
-                        <li> Calculer les propriétés mécaniques des systèmes biologique, les forces motrices et l'auto-organisation des cellules </li>
-                        <li> Appliquer la mécanique de Newton, le travail, le mouvement et le transfert d'énergie </li>
-                        <li> Apprendre la théorie des ondes, l'optique géométrique et la physique moderne </li>
-                        <li> Tester la théorie des circuits et des champs magnétiques </li>
-                        <li> Étudier la relativité restreinte et la physique nucléaire </li>
-                        <li> Analyser les principes de chimie, la vitesse de réaction et l'équilibre chimique en laboratoire </li>
-                        <li> Classer et identifier la caractérisation structurale des composés organiques </li>
-                    </ul>
-                -->
         </section>
 
         <!--
@@ -653,6 +608,9 @@
               <li>Programming Language Concepts</li>
               <li>Operating Systems</li>
               <li>WWW Structures, Techniques and Standards</li>
+              <li>Introduction to Artificial Intelligence</li>
+              <li>Computer Methods in Picture Processing and Analysis</li>
+              <li>Fundamentals of Data Science</li>
               <li>Introduction to Software Engineering</li>
               <li>Computer Architecture I</li>
               <li>Introduction to Data Communications and Networking</li>
@@ -670,6 +628,7 @@
               <li>Fundamentals of Physics II</li>
               <li>Physics in Biology</li>
               <li>Introduction to Molecular Biophysics</li>
+              <li>Biological Physics</li>
               <li>Introduction to Organismal Biology</li>
               <li>Introduction to Cell Biology</li>
               <li>Cell Biology</li>
@@ -698,6 +657,9 @@
               <li>Concepts des langages de programmation</li>
               <li>Systèmes d'exploitation</li>
               <li>Structures, techniques et normes du Web</li>
+              <li>Introduction à l'intelligence artificielle</li>
+              <li>Méthodes informatisées en traitement d'image</li>
+              <li>Principes fondamentaux de la science des données</li>
               <li>Introduction au génie logiciel</li>
               <li>Architecture des ordinateurs I</li>
               <li>
@@ -717,6 +679,7 @@
               <li>Principes fondamentaux de physique II</li>
               <li>La physique en biologie</li>
               <li>Introduction à la biophysique moléculaire</li>
+              <li>Physique biologique</li>
               <li>Introduction à la biologie des organismes</li>
               <li>Introduction à la biologie cellulaire</li>
               <li>Biologie cellulaire</li>
