--- a/resume.html
+++ b/resume.html
@@ -2,7 +2,7 @@
     My presentation, resume and projects
     Simon Paquette - Portfolio
     Author: Simon Paquette
-    Latest update: 2022/06
+    Latest update: 2022/07
 -->
 
 <!DOCTYPE html>
@@ -207,7 +207,8 @@
           <p>
             <a href="https://www.adga.ca/products/amari-by-adga"
               >Amari Project</a
-            >
+            >: "An adaptable artificial intelligence platform for earth
+            observation"
           </p>
 
           <h2>Geomatics systems developer</h2>
@@ -289,7 +290,9 @@
           <p class="date">mai 2022 - août 2022</p>
           <p>ADGA, Division Espace, Ottawa, Ontario</p>
           <p>
-            <a href="https://fr.adga.ca/products/amari-by-adga">Projet Amari</a>
+            <a href="https://fr.adga.ca/products/amari-by-adga">Projet Amari</a
+            >: Une plateforme d'intelligence artificielle adaptable pour
+            l'observation de la terre
           </p>
 
           <h2>Développeur de systèmes géomatiques</h2>
@@ -388,8 +391,8 @@
             <p><b class="align">3+ years:</b> Python</p>
             <p><b class="align">1 year:</b> Java, C++</p>
             <p>
-              <b class="align">Familiar:</b> SQL, HTML, CSS, JavaScript, C, Go,
-              Prolog, Scheme, Ocaml
+              <b class="align">Familiar:</b> SQL, HTML, CSS, C, Go, Prolog,
+              Scheme, Ocaml
             </p>
 
             <h2>Technologies</h2>
@@ -405,7 +408,7 @@
             <p>Data Structure</p>
             <p>Object-Oriented Programming</p>
             <p>Image Processing</p>
-            <p>AI, Machine Learning, Deep Learning</p>
+            <p>Basic AI, Machine Learning, Deep Learning</p>
             <p>Data Science</p>
             <p>Geographic Information System</p>
             <p>Algorithms</p>
@@ -447,8 +450,8 @@
             <p><b class="align">3+ ans:</b> Python</p>
             <p><b class="align">1 an:</b> Java, C++</p>
             <p>
-              <b class="align">Familier:</b> SQL, HTML, CSS, JavaScript, C, Go,
-              Prolog, Scheme, Ocaml
+              <b class="align">Familier:</b> SQL, HTML, CSS, C, Go, Prolog,
+              Scheme, Ocaml
             </p>
 
             <h2>Technologies</h2>
@@ -464,7 +467,7 @@
             <p>Structure de Données</p>
             <p>Programmation Orienté-Objet</p>
             <p>Traitement d'Images</p>
-            <p>IA, Apprentissage Automatique, Apprentissage Profond</p>
+            <p>Base en IA, Apprentissage Automatique, Apprentissage Profond</p>
             <p>Science des Données</p>
             <p>Système d'Information Géographique</p>
             <p>Algorithmes</p>
