--- a/resume.html
+++ b/resume.html
@@ -210,6 +210,21 @@
             >: "An adaptable artificial intelligence platform for earth
             observation"
           </p>
+          <ul>
+            <li>
+              Redesigned and improved a micro-services architecture for a
+              multiclass classification model for earth observation
+            </li>
+            <li>Developed and adapted GitLab CI pipelines</li>
+            <li>
+              Deployed ArgoCD with Kubernetes for continuous delivery of our
+              Docker containers
+            </li>
+            <li>
+              Gathered satellites imageries and ships detection data for our
+              transfer learning model
+            </li>
+          </ul>
 
           <h2>Geomatics systems developer</h2>
           <p class="date">June 2020 - December 2021</p>
@@ -266,7 +281,7 @@
             </li>
           </ul>
 
-          <h2>Research intern, Computer Science</h2>
+          <h2>Research intern, Computer Vision</h2>
           <p class="date">June 2017 - August 2018</p>
           <p>University of Ottawa, VIVA Lab, Ottawa, Ontario</p>
           <ul>
@@ -294,6 +309,22 @@
             >: Une plateforme d'intelligence artificielle adaptable pour
             l'observation de la terre
           </p>
+          <ul>
+            <li>
+              Remanier et améliorer une architecture de micro-services pour un
+              modèle de classification multi-classes pour l'observation de la
+              terre
+            </li>
+            <li>Développer et adapter des pipelines CI de GitLab</li>
+            <li>
+              Déployer ArgoCD avec Kubernetes pour la livraison continue de nos
+              conteneurs Docker
+            </li>
+            <li>
+              Collecter des images satellitaires et des données de détection de
+              navires pour notre modèle d'apprentissage par transfert
+            </li>
+          </ul>
 
           <h2>Développeur de systèmes géomatiques</h2>
           <p class="date">juin 2020 - décembre 2021</p>
@@ -353,7 +384,7 @@
             </li>
           </ul>
 
-          <h2>Assistant chercheur, Sciences informatiques</h2>
+          <h2>Assistant chercheur, Vision informatique</h2>
           <p class="date">juin 2017 - août 2018</p>
           <p>Université d'Ottawa, VIVA Lab, Ottawa, Ontario</p>
           <ul>
@@ -387,7 +418,7 @@
           </p>
 
           <div class="skill">
-            <h2>Languages</h2>
+            <h2>Programming Languages</h2>
             <p><b class="align">3+ years:</b> Python</p>
             <p><b class="align">1 year:</b> Java, C++</p>
             <p>
@@ -446,7 +477,7 @@
           </p>
 
           <div class="skill">
-            <h2>Langages</h2>
+            <h2>Langages de Programmation</h2>
             <p><b class="align">3+ ans:</b> Python</p>
             <p><b class="align">1 an:</b> Java, C++</p>
             <p>
